fix: improve mobile responsiveness and header alignment

--- a/admin/src/components/Navbar/Navbar.css
+++ b/admin/src/components/Navbar/Navbar.css
@@ -7,6 +7,8 @@
 
 .navbar .logo{
     width: max(10%, 80px);
+    border-radius: 10px;
+     border: 1px solid #d2ebd5;
 }
 
 .navbar .profile{
