--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -10,7 +10,7 @@
 
 body{
   min-height: 100vh;
-  /* background-color: #f3faf4; */
+  background-color: #f3faf4;
 }
 
 
