--- a/client/src/components/Login/LoginSignUp.css
+++ b/client/src/components/Login/LoginSignUp.css
@@ -74,3 +74,7 @@
     font-weight: 500;
     cursor: pointer;
 }
+
+.admin-link{
+    color: #63be6e;
+}
